--- a/package.json
+++ b/package.json
@@ -7,22 +7,29 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "npx playwright test"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.65.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.474.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.6.3",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
+    "sonner": "^2.0.3",
+    "tailwind-animate": "^0.2.10",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -36,9 +43,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "jest": "^29.7.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tw-animate-css": "^1.2.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
