--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.3.0",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
@@ -21,21 +20,17 @@
     "@tanstack/react-query": "^5.65.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.3",
+    "firebase": "^11.6.1",
     "lucide-react": "^0.474.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.6.3",
-    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "sonner": "^2.0.3",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
