--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_Ymxlc3NlZC1lbGstMzYuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_FIREBASE_API_KEY=AIzaSyBzEFBI695PXMUMDgLV2fw2O6z4nz3VH6M
+VITE_FIREBASE_AUTH_DOMAIN=splitsapp-f6d05.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=splitsapp-f6d05
+VITE_FIREBASE_STORAGE_BUCKET=splitsapp-f6d05.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=204034234722
+VITE_FIREBASE_APP_ID=1:204034234722:web:f431d26f7dd4075ea4b43b
+VITE_FIREBASE_MEASUREMENT_ID=G-HHQ24H6VGB
