--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.65.1",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.1",
@@ -30,7 +31,8 @@
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
