--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.65.1",
     "axios": "^1.9.0",
@@ -25,14 +26,12 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "sonner": "^2.0.3",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.3",
-    "zod": "^3.24.3",
-    "zustand": "^5.0.4"
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
