--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-select": "^5.10.1",
     "sonner": "^2.0.3",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.2.0",
